--- a/style.css
+++ b/style.css
@@ -1,60 +1,33 @@
+.heading
+{
+  font-size: 23px;
+  width: 100%;
+  margin: 0px;
+  box-shadow:5px 5px 5px grey;
+  background-color: black;
+  color:white;
+}
+.note
+{
+  font-size: 18px;
+  color: white;
+}
 .copy_right_footer {
-	position: fixed;
-	color: #6c757d;
-	bottom: 0;
-	width: 100%;
-	background-color: #f5f5f5;
-	line-height: 3;
-	text-align: center;
-	  font-family: 'Special Elite', cursive;
- 
- }
- ol h5
- {
-	 background: white;
-	 padding: 13px;
-	 border-radius: 20px;
- }
- span
- {
-	 color: red;
-	 font-size: 16px;
- }	
- li img
- {
-	 border-radius: 20px;
- }
- .bob
- {
-	 background: #949494;
-	 padding: 30px;
-	 border-radius: 20px;
-	 margin-top: 50px;
-	 box-shadow: 5px 5px 18px grey;
- }
- b
- {
-	 color:navy;
- }
- 
- .bob3
- {
-	 text-align: center;
-	 color: white;
- }
- .result
- {
-	 box-shadow: 5px 5px 18px grey;
-	 letter-spacing: 2px;
-	 background: #F2BAC9;
-	 border-radius: 20px;
-	 margin-top:30px;
-	 padding: 20px;
-	 border:2px solid grey
- }
+  position: fixed;
+  color: white;
+  bottom: 0;
+  width: 100%;
+  background-color:grey;
+  line-height: 3;
+  text-align: center;
+}
+canvas 
+{
+  border:5px solid white;
+  border-radius:20px;
+  box-shadow:10px 10px 10px grey;
+}
 
-
- body{
-	background: rgb(79,79,82);
-	background: linear-gradient(90deg, rgba(79,79,82,1) 0%, rgba(207,207,207,1) 100%);
- }
+body{
+    background-size: 850px;
+}
